# performance

./: CITATION.cff  README.md  setup.cfg
src/performance/: numpyext.py  parameters.py  performance_plots.py  profile_plot.py
src/performance/extractors/: extractor.py
tutorials/: extractors_testing.ipynb  hess_test.ipynb  signal_resolution.ipynb
