[metadata]
name = performance
version = 0.0.1
author = Clara Escanuela Nieves
author_email = clara.escanuela@mpi-hd.mpg.de
description = Small package for low-level benchmark
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/clara-escanuela/performance
project_urls =
    Bug Tracker = https://github.com/clara-escanuela/performance/issues
    Source Code = https://github.com/clara-escanuela/performance
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.8

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"
    numpy
    eventio >=1.9.1, <2.0.0a0
    matplotlib
    pandas
    ipython
    jupyter
    scipy
    astropy ~=5.0
    ctapipe~=0.19.0

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
